fix navbar overlapping the content

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ form input {
 /* overview */
 
 body {
-    margin: 0;
+    margin-top: 60px;
     font-family: Arial, sans-serif;
     background-color: #FAF9F6;
 }
@@ -50,15 +50,13 @@ header nav a {
 
 #food {
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-gap: 10px;
-    padding: 10px;
+    grid-template-rows: repeat(2, 1fr);
 }
 
 .images-flexbox {
     display: flex;
     flex-wrap: wrap;
-    padding: 10px;
+    padding: 0 10px 0 10px;
     gap: 20px;
 }
 
@@ -66,8 +64,8 @@ header nav a {
     width: 350px;
     height: 300px;
     text-align: center;
-    overflow: hidden;
     border-radius: 10px;
+    margin-bottom: 40px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.2), 0 6px 6px rgba(0,0,0,0.2);
 }
 
@@ -75,10 +73,10 @@ header nav a {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 10px;
 }
 
 .image-container p {
-    padding: 10px;
     font-weight: bold;
 }
 
